[package]
name = "render_toy"
version = "0.1.0"
authors = ["wws <1274704958@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.4", default-features = false, features = [
  "bevy_dynamic_plugin",
  "bevy_gilrs",
  "bevy_gltf",
  "bevy_wgpu",
  "bevy_winit",
  "render",
  "png",
  "hdr",
  "x11",
]}


[[example]]
name = "say-hello"
path = "src/example/hello.rs"

[[example]]
name = "window"
path = "src/example/window.rs"
