[package]
name = "render_toy"
version = "0.1.0"
authors = ["wws <1274704958@qq.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.8.0"


[[example]]
name = "say-hello"
path = "src/example/hello.rs"

[[example]]
name = "window"
path = "src/example/window.rs"
